// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<GenericError /> Rendering Should fire onPressEvent 1`] = `
Array [
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#FAFAFA",
        "flex": 1,
        "height": "100%",
        "justifyContent": "center",
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "width": 532.6086956521739,
        }
      }
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight="87"
        bbWidth="158"
        fill="none"
        focusable={false}
        height="87"
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "flex": 0,
              "height": 87,
              "width": 158,
            },
          ]
        }
        vbHeight={87}
        vbWidth={158}
        width="158"
      >
        <RNSVGGroup
          fill={null}
          propList={
            Array [
              "fill",
            ]
          }
        >
          <RNSVGPath
            d="M47.5 80H3"
            propList={
              Array [
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={4293908696}
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth="4.91"
          />
          <RNSVGPath
            d="M140.027 47H118.027"
            propList={
              Array [
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={4293908696}
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth="4.91"
          />
          <RNSVGPath
            d="M138.527 80H106.027"
            propList={
              Array [
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={4293908696}
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth="4.91"
          />
          <RNSVGCircle
            cx="47.885"
            cy="64.1739"
            matrix={
              Array [
                0.9591220625022131,
                -0.282992701710664,
                0.282992701710664,
                0.9591220625022131,
                -16.203305303228454,
                16.17440219460437,
              ]
            }
            propList={
              Array [
                "stroke",
                "strokeWidth",
              ]
            }
            r="15.845"
            stroke={4291180339}
            strokeWidth="4.91"
          />
          <RNSVGPath
            d="M138 64H100"
            propList={
              Array [
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={4293908696}
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth="4.91"
          />
          <RNSVGCircle
            cx="138.527"
            cy="63.5"
            propList={
              Array [
                "stroke",
                "strokeWidth",
              ]
            }
            r="16.5"
            stroke={4291180339}
            strokeWidth="4.91"
          />
          <RNSVGPath
            d="M106.392 46.9113L78.7061 10.5601L72.8555 12.2864"
            propList={
              Array [
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={4291180339}
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth="4.91"
          />
          <RNSVGPath
            d="M43.9521 29.2942L51.753 26.9925"
            propList={
              Array [
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={4291180339}
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth="4.91"
          />
          <RNSVGPath
            d="M48.4288 30.0934L57.732 40.0684M57.732 40.0684L75.1874 56.118L87.7846 26.9613L57.732 40.0684ZM57.732 40.0684L47.8844 64.1739"
            propList={
              Array [
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={4291180339}
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth="4.91"
          />
          <RNSVGPath
            d="M120.369 28.7695C120.679 28.7695 120.975 28.6966 121.258 28.5508C121.549 28.4141 121.882 28.1816 122.256 27.8535L127.273 23.4648H135.012C136.333 23.4648 137.482 23.2005 138.457 22.6719C139.432 22.1341 140.184 21.3776 140.713 20.4023C141.242 19.4271 141.506 18.2786 141.506 16.957V6.52539C141.506 5.20378 141.242 4.05534 140.713 3.08008C140.184 2.10482 139.432 1.35286 138.457 0.824219C137.482 0.286458 136.333 0.0175781 135.012 0.0175781H118.975C117.644 0.0175781 116.491 0.286458 115.516 0.824219C114.549 1.35286 113.798 2.10482 113.26 3.08008C112.731 4.05534 112.467 5.20378 112.467 6.52539V16.957C112.467 18.2786 112.74 19.4271 113.287 20.4023C113.843 21.3776 114.586 22.1341 115.516 22.6719C116.454 23.2005 117.498 23.4648 118.646 23.4648H118.92V27.1562C118.92 27.6484 119.048 28.0404 119.303 28.332C119.558 28.6237 119.913 28.7695 120.369 28.7695ZM127.014 13.4434C125.965 13.4434 125.41 12.9238 125.346 11.8848L125.127 6.94922C125.1 6.40234 125.259 5.96029 125.605 5.62305C125.952 5.28581 126.417 5.11719 127 5.11719C127.574 5.11719 128.035 5.29036 128.381 5.63672C128.736 5.97396 128.905 6.41146 128.887 6.94922L128.654 11.8711C128.59 12.9193 128.044 13.4434 127.014 13.4434ZM127.014 18.2695C126.449 18.2695 125.975 18.1146 125.592 17.8047C125.209 17.4857 125.018 17.0573 125.018 16.5195C125.018 15.9909 125.209 15.5716 125.592 15.2617C125.975 14.9427 126.449 14.7832 127.014 14.7832C127.588 14.7832 128.062 14.9427 128.436 15.2617C128.809 15.5716 128.996 15.9909 128.996 16.5195C128.996 17.0664 128.805 17.4948 128.422 17.8047C128.048 18.1146 127.579 18.2695 127.014 18.2695Z"
            fill={4293908696}
            propList={
              Array [
                "fill",
              ]
            }
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <Text
        style={
          Object {
            "fontFamily": "DIN2014Narrow-Bold",
            "fontSize": 24,
            "marginTop": 35.73214285714286,
            "textAlign": "center",
          }
        }
      >
        PublishThankYouPage.errorTitle
      </Text>
      <View
        style={
          Object {
            "marginTop": 35.73214285714286,
            "width": "100%",
          }
        }
      >
        <View
          accessibilityState={
            Object {
              "disabled": false,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              Object {
                "alignItems": "center",
                "borderRadius": 30.76923076923077,
                "flexDirection": "row",
                "height": "100%",
                "justifyContent": "center",
                "width": "100%",
              },
              Object {
                "elevation": 5,
                "shadowColor": "rgba(51, 51, 51, 0.07)",
                "shadowOffset": Object {
                  "height": 0,
                  "width": 7.6923076923076925,
                },
                "shadowOpacity": 1,
                "shadowRadius": 15.384615384615385,
              },
              Array [
                Object {
                  "height": 92.3076923076923,
                  "width": 565.3846153846154,
                },
                Object {
                  "height": 48,
                },
              ],
            ]
          }
          testID="secondary-btn-test-id"
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "borderRadius": 30.76923076923077,
                  "flexDirection": "row",
                  "height": "100%",
                  "justifyContent": "center",
                  "width": "100%",
                },
                Object {
                  "backgroundColor": "#FFFFFF",
                },
                undefined,
              ]
            }
            testID="secondary-btn-test-id-container"
          >
            <Text
              adjustsFontSizeToFit={true}
              style={
                Array [
                  Object {
                    "color": "#333333",
                    "fontFamily": "DIN2014-Demi",
                    "fontSize": 18,
                    "lineHeight": 28,
                    "textAlign": "left",
                  },
                  Object {
                    "color": "#C63733",
                  },
                ]
              }
              testID="secondary-btn-test-id-text"
            >
              PublishThankYouPage.btnOk
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>,
  <View
    style={
      Array [
        Object {
          "position": "absolute",
          "width": "100%",
        },
        undefined,
      ]
    }
  >
    <View
      collapsable={false}
      nativeID="animatedComponent"
      style={
        Object {
          "backgroundColor": "#313131",
          "bottom": 0,
          "height": 0,
          "justifyContent": "flex-end",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": "100%",
          "zIndex": 1000,
        }
      }
    >
      <Text
        collapsable={false}
        nativeID="animatedComponent"
        numberOfLines={1}
        style={
          Object {
            "color": "#ffffff",
            "fontFamily": "DIN2014Narrow-Regular",
            "fontSize": 13,
            "letterSpacing": 0.4,
            "opacity": 0,
            "paddingBottom": 7.444196428571429,
            "paddingHorizontal": 36.231884057971016,
            "textAlign": "center",
          }
        }
      >
        
      </Text>
    </View>
  </View>,
]
`;

exports[`<GenericError /> Rendering Should match snapshot 1`] = `
Array [
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#FAFAFA",
        "flex": 1,
        "height": "100%",
        "justifyContent": "center",
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "width": 532.6086956521739,
        }
      }
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight="87"
        bbWidth="158"
        fill="none"
        focusable={false}
        height="87"
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "flex": 0,
              "height": 87,
              "width": 158,
            },
          ]
        }
        vbHeight={87}
        vbWidth={158}
        width="158"
      >
        <RNSVGGroup
          fill={null}
          propList={
            Array [
              "fill",
            ]
          }
        >
          <RNSVGPath
            d="M47.5 80H3"
            propList={
              Array [
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={4293908696}
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth="4.91"
          />
          <RNSVGPath
            d="M140.027 47H118.027"
            propList={
              Array [
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={4293908696}
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth="4.91"
          />
          <RNSVGPath
            d="M138.527 80H106.027"
            propList={
              Array [
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={4293908696}
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth="4.91"
          />
          <RNSVGCircle
            cx="47.885"
            cy="64.1739"
            matrix={
              Array [
                0.9591220625022131,
                -0.282992701710664,
                0.282992701710664,
                0.9591220625022131,
                -16.203305303228454,
                16.17440219460437,
              ]
            }
            propList={
              Array [
                "stroke",
                "strokeWidth",
              ]
            }
            r="15.845"
            stroke={4291180339}
            strokeWidth="4.91"
          />
          <RNSVGPath
            d="M138 64H100"
            propList={
              Array [
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={4293908696}
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth="4.91"
          />
          <RNSVGCircle
            cx="138.527"
            cy="63.5"
            propList={
              Array [
                "stroke",
                "strokeWidth",
              ]
            }
            r="16.5"
            stroke={4291180339}
            strokeWidth="4.91"
          />
          <RNSVGPath
            d="M106.392 46.9113L78.7061 10.5601L72.8555 12.2864"
            propList={
              Array [
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={4291180339}
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth="4.91"
          />
          <RNSVGPath
            d="M43.9521 29.2942L51.753 26.9925"
            propList={
              Array [
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={4291180339}
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth="4.91"
          />
          <RNSVGPath
            d="M48.4288 30.0934L57.732 40.0684M57.732 40.0684L75.1874 56.118L87.7846 26.9613L57.732 40.0684ZM57.732 40.0684L47.8844 64.1739"
            propList={
              Array [
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={4291180339}
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth="4.91"
          />
          <RNSVGPath
            d="M120.369 28.7695C120.679 28.7695 120.975 28.6966 121.258 28.5508C121.549 28.4141 121.882 28.1816 122.256 27.8535L127.273 23.4648H135.012C136.333 23.4648 137.482 23.2005 138.457 22.6719C139.432 22.1341 140.184 21.3776 140.713 20.4023C141.242 19.4271 141.506 18.2786 141.506 16.957V6.52539C141.506 5.20378 141.242 4.05534 140.713 3.08008C140.184 2.10482 139.432 1.35286 138.457 0.824219C137.482 0.286458 136.333 0.0175781 135.012 0.0175781H118.975C117.644 0.0175781 116.491 0.286458 115.516 0.824219C114.549 1.35286 113.798 2.10482 113.26 3.08008C112.731 4.05534 112.467 5.20378 112.467 6.52539V16.957C112.467 18.2786 112.74 19.4271 113.287 20.4023C113.843 21.3776 114.586 22.1341 115.516 22.6719C116.454 23.2005 117.498 23.4648 118.646 23.4648H118.92V27.1562C118.92 27.6484 119.048 28.0404 119.303 28.332C119.558 28.6237 119.913 28.7695 120.369 28.7695ZM127.014 13.4434C125.965 13.4434 125.41 12.9238 125.346 11.8848L125.127 6.94922C125.1 6.40234 125.259 5.96029 125.605 5.62305C125.952 5.28581 126.417 5.11719 127 5.11719C127.574 5.11719 128.035 5.29036 128.381 5.63672C128.736 5.97396 128.905 6.41146 128.887 6.94922L128.654 11.8711C128.59 12.9193 128.044 13.4434 127.014 13.4434ZM127.014 18.2695C126.449 18.2695 125.975 18.1146 125.592 17.8047C125.209 17.4857 125.018 17.0573 125.018 16.5195C125.018 15.9909 125.209 15.5716 125.592 15.2617C125.975 14.9427 126.449 14.7832 127.014 14.7832C127.588 14.7832 128.062 14.9427 128.436 15.2617C128.809 15.5716 128.996 15.9909 128.996 16.5195C128.996 17.0664 128.805 17.4948 128.422 17.8047C128.048 18.1146 127.579 18.2695 127.014 18.2695Z"
            fill={4293908696}
            propList={
              Array [
                "fill",
              ]
            }
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <Text
        style={
          Object {
            "fontFamily": "DIN2014Narrow-Bold",
            "fontSize": 24,
            "marginTop": 35.73214285714286,
            "textAlign": "center",
          }
        }
      >
        PublishThankYouPage.errorTitle
      </Text>
      <View
        style={
          Object {
            "marginTop": 35.73214285714286,
            "width": "100%",
          }
        }
      >
        <View
          accessibilityState={
            Object {
              "disabled": false,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              Object {
                "alignItems": "center",
                "borderRadius": 30.76923076923077,
                "flexDirection": "row",
                "height": "100%",
                "justifyContent": "center",
                "width": "100%",
              },
              Object {
                "elevation": 5,
                "shadowColor": "rgba(51, 51, 51, 0.07)",
                "shadowOffset": Object {
                  "height": 0,
                  "width": 7.6923076923076925,
                },
                "shadowOpacity": 1,
                "shadowRadius": 15.384615384615385,
              },
              Array [
                Object {
                  "height": 92.3076923076923,
                  "width": 565.3846153846154,
                },
                Object {
                  "height": 48,
                },
              ],
            ]
          }
          testID="secondary-btn-test-id"
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "borderRadius": 30.76923076923077,
                  "flexDirection": "row",
                  "height": "100%",
                  "justifyContent": "center",
                  "width": "100%",
                },
                Object {
                  "backgroundColor": "#FFFFFF",
                },
                undefined,
              ]
            }
            testID="secondary-btn-test-id-container"
          >
            <Text
              adjustsFontSizeToFit={true}
              style={
                Array [
                  Object {
                    "color": "#333333",
                    "fontFamily": "DIN2014-Demi",
                    "fontSize": 18,
                    "lineHeight": 28,
                    "textAlign": "left",
                  },
                  Object {
                    "color": "#C63733",
                  },
                ]
              }
              testID="secondary-btn-test-id-text"
            >
              PublishThankYouPage.btnOk
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>,
  <View
    style={
      Array [
        Object {
          "position": "absolute",
          "width": "100%",
        },
        undefined,
      ]
    }
  >
    <View
      collapsable={false}
      nativeID="animatedComponent"
      style={
        Object {
          "backgroundColor": "#313131",
          "bottom": 0,
          "height": 0,
          "justifyContent": "flex-end",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": "100%",
          "zIndex": 1000,
        }
      }
    >
      <Text
        collapsable={false}
        nativeID="animatedComponent"
        numberOfLines={1}
        style={
          Object {
            "color": "#ffffff",
            "fontFamily": "DIN2014Narrow-Regular",
            "fontSize": 13,
            "letterSpacing": 0.4,
            "opacity": 0,
            "paddingBottom": 7.444196428571429,
            "paddingHorizontal": 36.231884057971016,
            "textAlign": "center",
          }
        }
      >
        
      </Text>
    </View>
  </View>,
]
`;

exports[`<GenericError /> Rendering Should match snapshot with error message 1`] = `
Array [
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#FAFAFA",
        "flex": 1,
        "height": "100%",
        "justifyContent": "center",
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "width": 532.6086956521739,
        }
      }
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight="87"
        bbWidth="158"
        fill="none"
        focusable={false}
        height="87"
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "flex": 0,
              "height": 87,
              "width": 158,
            },
          ]
        }
        vbHeight={87}
        vbWidth={158}
        width="158"
      >
        <RNSVGGroup
          fill={null}
          propList={
            Array [
              "fill",
            ]
          }
        >
          <RNSVGPath
            d="M47.5 80H3"
            propList={
              Array [
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={4293908696}
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth="4.91"
          />
          <RNSVGPath
            d="M140.027 47H118.027"
            propList={
              Array [
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={4293908696}
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth="4.91"
          />
          <RNSVGPath
            d="M138.527 80H106.027"
            propList={
              Array [
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={4293908696}
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth="4.91"
          />
          <RNSVGCircle
            cx="47.885"
            cy="64.1739"
            matrix={
              Array [
                0.9591220625022131,
                -0.282992701710664,
                0.282992701710664,
                0.9591220625022131,
                -16.203305303228454,
                16.17440219460437,
              ]
            }
            propList={
              Array [
                "stroke",
                "strokeWidth",
              ]
            }
            r="15.845"
            stroke={4291180339}
            strokeWidth="4.91"
          />
          <RNSVGPath
            d="M138 64H100"
            propList={
              Array [
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={4293908696}
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth="4.91"
          />
          <RNSVGCircle
            cx="138.527"
            cy="63.5"
            propList={
              Array [
                "stroke",
                "strokeWidth",
              ]
            }
            r="16.5"
            stroke={4291180339}
            strokeWidth="4.91"
          />
          <RNSVGPath
            d="M106.392 46.9113L78.7061 10.5601L72.8555 12.2864"
            propList={
              Array [
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={4291180339}
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth="4.91"
          />
          <RNSVGPath
            d="M43.9521 29.2942L51.753 26.9925"
            propList={
              Array [
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={4291180339}
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth="4.91"
          />
          <RNSVGPath
            d="M48.4288 30.0934L57.732 40.0684M57.732 40.0684L75.1874 56.118L87.7846 26.9613L57.732 40.0684ZM57.732 40.0684L47.8844 64.1739"
            propList={
              Array [
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={4291180339}
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth="4.91"
          />
          <RNSVGPath
            d="M120.369 28.7695C120.679 28.7695 120.975 28.6966 121.258 28.5508C121.549 28.4141 121.882 28.1816 122.256 27.8535L127.273 23.4648H135.012C136.333 23.4648 137.482 23.2005 138.457 22.6719C139.432 22.1341 140.184 21.3776 140.713 20.4023C141.242 19.4271 141.506 18.2786 141.506 16.957V6.52539C141.506 5.20378 141.242 4.05534 140.713 3.08008C140.184 2.10482 139.432 1.35286 138.457 0.824219C137.482 0.286458 136.333 0.0175781 135.012 0.0175781H118.975C117.644 0.0175781 116.491 0.286458 115.516 0.824219C114.549 1.35286 113.798 2.10482 113.26 3.08008C112.731 4.05534 112.467 5.20378 112.467 6.52539V16.957C112.467 18.2786 112.74 19.4271 113.287 20.4023C113.843 21.3776 114.586 22.1341 115.516 22.6719C116.454 23.2005 117.498 23.4648 118.646 23.4648H118.92V27.1562C118.92 27.6484 119.048 28.0404 119.303 28.332C119.558 28.6237 119.913 28.7695 120.369 28.7695ZM127.014 13.4434C125.965 13.4434 125.41 12.9238 125.346 11.8848L125.127 6.94922C125.1 6.40234 125.259 5.96029 125.605 5.62305C125.952 5.28581 126.417 5.11719 127 5.11719C127.574 5.11719 128.035 5.29036 128.381 5.63672C128.736 5.97396 128.905 6.41146 128.887 6.94922L128.654 11.8711C128.59 12.9193 128.044 13.4434 127.014 13.4434ZM127.014 18.2695C126.449 18.2695 125.975 18.1146 125.592 17.8047C125.209 17.4857 125.018 17.0573 125.018 16.5195C125.018 15.9909 125.209 15.5716 125.592 15.2617C125.975 14.9427 126.449 14.7832 127.014 14.7832C127.588 14.7832 128.062 14.9427 128.436 15.2617C128.809 15.5716 128.996 15.9909 128.996 16.5195C128.996 17.0664 128.805 17.4948 128.422 17.8047C128.048 18.1146 127.579 18.2695 127.014 18.2695Z"
            fill={4293908696}
            propList={
              Array [
                "fill",
              ]
            }
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <Text
        style={
          Object {
            "fontFamily": "DIN2014Narrow-Bold",
            "fontSize": 24,
            "marginTop": 35.73214285714286,
            "textAlign": "center",
          }
        }
      >
        Test
      </Text>
      <View
        style={
          Object {
            "marginTop": 29.776785714285715,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#414141",
              "fontFamily": "DIN2014Narrow-Regular",
              "fontSize": 16,
            }
          }
          testID="undefinedMessage"
        >
          Test
        </Text>
      </View>
      <View
        style={
          Object {
            "marginTop": 35.73214285714286,
            "width": "100%",
          }
        }
      >
        <View
          accessibilityState={
            Object {
              "disabled": false,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              Object {
                "alignItems": "center",
                "borderRadius": 30.76923076923077,
                "flexDirection": "row",
                "height": "100%",
                "justifyContent": "center",
                "width": "100%",
              },
              Object {
                "elevation": 5,
                "shadowColor": "rgba(51, 51, 51, 0.07)",
                "shadowOffset": Object {
                  "height": 0,
                  "width": 7.6923076923076925,
                },
                "shadowOpacity": 1,
                "shadowRadius": 15.384615384615385,
              },
              Array [
                Object {
                  "height": 92.3076923076923,
                  "width": 565.3846153846154,
                },
                Object {
                  "height": 48,
                },
              ],
            ]
          }
          testID="secondary-btn-test-id"
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "borderRadius": 30.76923076923077,
                  "flexDirection": "row",
                  "height": "100%",
                  "justifyContent": "center",
                  "width": "100%",
                },
                Object {
                  "backgroundColor": "#FFFFFF",
                },
                undefined,
              ]
            }
            testID="secondary-btn-test-id-container"
          >
            <Text
              adjustsFontSizeToFit={true}
              style={
                Array [
                  Object {
                    "color": "#333333",
                    "fontFamily": "DIN2014-Demi",
                    "fontSize": 18,
                    "lineHeight": 28,
                    "textAlign": "left",
                  },
                  Object {
                    "color": "#C63733",
                  },
                ]
              }
              testID="secondary-btn-test-id-text"
            >
              PublishThankYouPage.btnOk
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>,
  <View
    style={
      Array [
        Object {
          "position": "absolute",
          "width": "100%",
        },
        undefined,
      ]
    }
  >
    <View
      collapsable={false}
      nativeID="animatedComponent"
      style={
        Object {
          "backgroundColor": "#313131",
          "bottom": 0,
          "height": 0,
          "justifyContent": "flex-end",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": "100%",
          "zIndex": 1000,
        }
      }
    >
      <Text
        collapsable={false}
        nativeID="animatedComponent"
        numberOfLines={1}
        style={
          Object {
            "color": "#ffffff",
            "fontFamily": "DIN2014Narrow-Regular",
            "fontSize": 13,
            "letterSpacing": 0.4,
            "opacity": 0,
            "paddingBottom": 7.444196428571429,
            "paddingHorizontal": 36.231884057971016,
            "textAlign": "center",
          }
        }
      >
        
      </Text>
    </View>
  </View>,
]
`;
